2005-10-08  Francois Dumont  <dums@stlport...>

	* stlport/stl/_config.h: Add endianess specification for DEC alpha thanks
	sourceforge compiler farm.

	* stlport/config/stl_intel.h: Remove reference to _STLP_GLOBAL_NEW_HANDLER
	in this file as this macro depends on native Standard library which is
	the back end MSVC compiler one so macro set in stl_msvc.h.

2005-10-07  Francois Dumont  <dums@stlport...>

	* build/Makefiles/gmake/darwin/sys.mak, freebsd/sys.mak: Fix EXT_TEST
	definition to test rather than /usr/bin/test thanks sourceforge
	compiler farm.

2005-10-05  Francois Dumont  <dums@stlport...>

	* build/Makefiles/nmake/vc-common.mak: Remove /Fd option for the icl
	compiler that do not know it.

2005-10-04  Francois Dumont  <dums@stlport...>

	* stlport/stl/debug/_list.h: Fix resize method implementation in safe
	STL mode thanks Ethan Fenn report.

	* test/unit/list_test.cpp: Add test case for list::resize method.

	* build/Makefiles/nmake/lib/rules-install-a.mak, app/rules-install-a.mak:
	Install .pdb files only if exist, Intel C++ compiler do not generate them
	when building static libraries. Thanks Albrecht Fritzsche

	* stlport/stl/_ostream.h, _ostream.c: Move _M_init function implementation
	from .c to .h as .c is not included when _STLP_NO_CUSTOM_IO is defined
	but _M_init might not be exported if compiler fully inline it.

2005-10-03  Francois Dumont  <dums@stlport...>

	* stlport/stl/_tree.h: Fix _S_value method definition that returns
	a value_type& rather than the reference typedef as reference might be,
	depending on the traits used to instanciate _Rb_tree, equivalent to
	a const_reference.

2005-09-30  Francois Dumont  <dums@stlport...>

	* INSTALL, README, doc/FAQ, doc/README.msvc: Documentation updates.

	* doc/stlport_namespaces.txt: Small doc about STLport namespaces and how
	STLport replace native Standard library.

2005-09-26  Francois Dumont  <dums@stlport...>

	* build/*: Finished _STLP_LEAKS_PEDANTIC clean up from all make files.
