@@ -1,3 +1,7 @@
+2005-10-09  Francois Dumont  <dums@stlport...>
+
+	* stlport/config/stl_gcc.h: DEC alpha has not *l math functions
+
 2005-10-08  Francois Dumont  <dums@stlport...>
 
 	* stlport/stl/_config.h: Add endianess specification for DEC alpha thanks
